[project]
name = "arrhythmia-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "neurokit2>=0.2.12",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
    "wfdb>=4.3.1",
]